tests/ui/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0277]: the trait bound `NonConstImpl: ~const ConstDefaultFn` is not satisfied
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL |     NonConstImpl.a();
   |                  ^ the trait `~const ConstDefaultFn` is not implemented for `NonConstImpl`
   |
note: the trait `ConstDefaultFn` is implemented for `NonConstImpl`, but that implementation is not `const`
  --> $DIR/const-default-method-bodies.rs:24:5
   |
LL |     NonConstImpl.a();
   |     ^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
